--- a/main.yml
+++ b/main.yml
@@ -78,7 +78,7 @@ jobs:
           COMMIT_SHA=$(echo $GITHUB_SHA | cut -c 1-5)
           echo $COMMIT_SHA
 
-          docker tag apicontainer:latest <substituir_aqui>/apicontainer:$COMMIT_SHA
-          docker push <substituir_aqui>/apicontainer:$COMMIT_SHA
+          docker tag apicontainer:latest <kaua7k>/apicontainer:$COMMIT_SHA
+          docker push <kaua7k>/apicontainer:$COMMIT_SHA
 
       - run: echo "🍏 This job's status is ${{ job.status }}."
