--- a/main.yml
+++ b/main.yml
@@ -1,4 +1,4 @@
-name: senai_automacao1
+name: senai_automacao
 run-name: ${{ github.actor }} Pipeline deploy
 on:
   push:
@@ -12,6 +12,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: INSTALL PACKAGES
         run: |
           sudo apt update -y
@@ -31,7 +32,6 @@ jobs:
             sudo tee /etc/apt/sources.list.d/hashicorp.list
 
           sudo apt update -y
-
           sudo apt-get install terraform -y
 
       - name: SNYK AUTH
@@ -39,6 +39,7 @@ jobs:
           snyk -d auth $SNYK_TOKEN
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_AUTH_TOKEN }}
+
       - name: Configure AWS CLI
         if: always()
         uses: aws-actions/configure-aws-credentials@v4
@@ -57,7 +58,7 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
-          username: ${{ secrets.DOCKER_USER }}
+          username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
      
       - name: Docker build (CI)
