--- a/main.yml
+++ b/main.yml
@@ -1,4 +1,4 @@
-name: senai_automacao
+name: senai_automacao1
 run-name: ${{ github.actor }} Pipeline deploy
 on:
   push:
@@ -12,7 +12,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
       - name: INSTALL PACKAGES
         run: |
           sudo apt update -y
@@ -32,6 +31,7 @@ jobs:
             sudo tee /etc/apt/sources.list.d/hashicorp.list
 
           sudo apt update -y
+
           sudo apt-get install terraform -y
 
       - name: SNYK AUTH
@@ -39,7 +39,6 @@ jobs:
           snyk -d auth $SNYK_TOKEN
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_AUTH_TOKEN }}
-
       - name: Configure AWS CLI
         if: always()
         uses: aws-actions/configure-aws-credentials@v4
@@ -58,17 +57,19 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
-          username: ${{ secrets.DOCKER_USERNAME }}
+          username: ${{ secrets.DOCKER_USER }}
           password: ${{ secrets.DOCKER_PASSWORD }}
      
       - name: Docker build (CI)
-        if: always()
-        run: |
-          docker build --build-arg AWS_SESSION_TOKEN=$AWS_SESSION_TOKEN --build-arg AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID --build-arg AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY --build-arg AWS_DEFAULT_REGION="us-east-1" -t apicontainer .
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
+  if: always()
+  run: |
+    cd C:\ISOs e Apps\Projetos Terraform\aulas\entrega\
+    docker build --build-arg AWS_SESSION_TOKEN=$AWS_SESSION_TOKEN --build-arg AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID --build-arg AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY --build-arg AWS_DEFAULT_REGION="us-east-1" -t apicontainer .
+  env:
+    AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+    AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
+
          
       - name: Docker Analysis (CI)
         if: always()
